# Rustland-old

./: .a.swp  .gitignore  Cargo.toml  LICENSE  README.md  lock
src/: definitions.rs  main.rs  wmstate.rs
src/common/: definitions.rs  job.rs  lib.rs
src/handlers/: input.rs
src/layout/: arrangement.rs  mod.rs  rules.rs  segmentation.rs  window.rs  workspace.rs
src/layout/element/: mod.rs  segmentation.rs  window.rs  workspace.rs
src/rlctl/: main.rs
src/rustland/: async.rs  compositor.rs  main.rs  wmstate.rs
src/rustland/config/: background.rs  keyboard.rs  layout.rs  mod.rs
src/rustland/io/: mod.rs  physical.rs  tcp_server.rs  wallpaper.rs
src/rustland/layout/: arrangement.rs  mod.rs  property.rs  rules.rs  tag.rs  transition.rs
src/rustland/layout/element/: bisect.rs  grid.rs  mod.rs  padding.rs  segmentation.rs  window.rs  workspace.rs  workspaces.rs
src/rustland/layout/policy/: auto_circulation.rs  circulation.rs  mod.rs
src/rustland/sugars/: frame.rs  mod.rs  program.rs  solid_color.rs  wallpaper.rs
src/rustland/utils/: enum_derive.rs  geometry.rs  mod.rs
src/rustland/utils/interpolation/: methods.rs  mod.rs  presets.rs
