[package]
name = "Rustland"
version = "0.2.0"
authors = ["perfah"]

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "rustland"
path = "src/rustland/main.rs"

[[bin]]
name = "rlctl"
path = "src/rlctl/main.rs"

[dependencies]
wlc = "2.0.1"
lazy_static = "0.2.4"
serde = "0.9.11"
serde_derive = "0.9.11"
serde_json = "0.9.9"
num = "0.1.37"
num-traits = "0.1.37"